# SNNgine3D

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  tox.ini
.github/: CODEOWNERS  action-options.json  settings.yml
.github/workflows/: build-push-docker-nomachine-base-image.yml  build-push-docker-nomachine-image.yml  check.yml  delete-workflow-runs.yml  labels.yml  publish-docker-base-image.yml  publish.yml  pull-test.yml  push-main.yml
docker/: Dockerfile  Dockerfile-SNNgine3D-nomachine  Dockerfile-SNNgine3D-nomachine-base  docker_images_diagram.puml  fix-permissions
notebooks/simulation_demo/: sim_demo_utils.py  simulation.ipynb
notebooks/simulation_demo/sim_demo_precompiled/: CMakeLists.txt  __init__.py
notebooks/simulation_demo/sim_demo_precompiled/src/: snn_sim_demo.cu  snn_sim_demo.cuh  snn_sim_demo_bindings.cu
snn_engine2/: main.py
snn_engine2/configured_networks/: defaultnetwork0.py  rate_network0.py
snn_engine2/engine/: base_engine.py
snn_engine2/network/: network_config.py
snn_engine2/network/gpu/: neurons.py
snn_engine2/rendering/: memcpy3d_test.py  surface2d.py  texture3d_.py
snn_engine3d/: __init__.py  cli.py
snngine3d/: __init__.py  cli.py
snngine3d/config_models/: __init__.py  chemical_config.py  config.py  network_config.py  plotting_config.py
snngine3d/config_models/sub_configs/: __init__.py  (+2 more)
snngine3d/engine/: __init__.py  engine.py
snngine3d/interfaces/: neuron_interface.py
snngine3d/nn/: __init__.py
snngine3d/vispy_torch_interop/: __init__.py
tests/: test_cli.py  tox.ini
(+83 files in other folders)
